# Query_optimizer

./: CMakeLists.txt  Makefile  README.md  guidelines.txt  lex.yy.c  proposal.txt  simple_test.sql  test_batch.sql  test_query.sql  test_suite.py  y.tab.c  y.tab.h
docs/: design_notes.md
examples/: sample_queries.sql
include/: cost_estimator.h  enumerator.h  models.h  optimizer.h  parser.h  plan_printer.h  statistics.h
scratch/: test_query.sql
src/: catalog.cpp  cost_estimator.cpp  enumerator.cpp  main.cpp  optimizer.cpp  parser.cpp  plan_printer.cpp  statistics.cpp
test/: test.sql  test_filter.sql  test_join.sql  test_multiplication.sql  test_negative1.sql  test_negative2.sql  test_negative3.sql  test_parse2.sql  test_parsing_errors.sql  test_problem.sql  test_subquery.sql  test_working1.sql  test_working2.sql
